# Matrixlang

./: CHANGELOG  CMakeLists.txt  README.md  notes.txt
examples/: HelloWorld.ml  MergeSort.ml  YearInfo.ml
headers/: Executor.h  Interpreter.h  LanguageObjects.h  Lexer.h  Parser.h  Token.h
headers/ExecutionObjects/: EmbeddedFunctionsDeclarations.h  EmbeddedFunctionsDefinitions.h  EnvironmentalConstants.h  Execution.h  MatrixVariable.h  OperatorExecution.h  Scope.h  ScopeManager.h  SimpleVariable.h  Variable.h  VectorVariable.h  VoidVariable.h
headers/LanguageObjects/: ArgumentList.h  BinaryExpression.h  Block.h  CaseC.h  CaseGo.h  Declaration.h  Default.h  EmbeddedFunction.h  Expression.h  For.h  FuncallExpression.h  Function.h  If.h  Instruction.h  InstructionList.h  LiteralExpression.h  MatrixIndexExpression.h  MatrixType.h  Operator.h  PostExpression.h  Program.h  Return.h  SimpleType.h  Statement.h  StringExpression.h  Switch.h  SwitchC.h  SwitchGo.h  Type.h  UnaryExpression.h  UnaryRValueExpression.h  VariableExpression.h  VectorIndexExpression.h  VectorType.h
src/: Executor.cpp  Lexer.cpp  Parser.cpp  main.cpp
src/ExecutionObjects/: EmbeddedFunctionsDeclarations.cpp  (+4 more)
tests/: AuxiliaryFunctionsExecutor.h  AuxiliaryFunctionsLexer.h  AuxiliaryFunctionsParser.h  ExecutionExpressions.cpp  ExecutionInstructions.cpp  ExecutionScope.cpp  ExecutionVariables.cpp  ExecutorParametrised.cpp  LexerComplex.cpp  LexerParametrised.cpp  LexerSimple.cpp  OperatorExecution.cpp  ParserCheckError.cpp  ParserExpectError.cpp  ParserParametrised.cpp  TestPrograms.h  main.cpp
(+26 files in other folders)
